compiler/tests/fixtures/compile_errors/return_call_to_fn_with_param_type_mismatch.fe
contract Foo:

    pub def foo(val: address) -> u256:
        return 42

    pub def bar() -> u256:
        return self.foo(100)
